# sysapi

./: Cargo.toml  README.md  copyto.bat  mt.conf  sync.bat  sysapi.conf
gensql/: Cargo.toml
gensql/gensql_derive/: Cargo.toml
gensql/gensql_derive/src/: lib.rs
gensql/src/: db_mysql.rs  faststr.rs  lib.rs  sql_builder.rs
httpserver/src/: macros.rs
localtime/src/: localtime_time.rs
src/: apis.rs  auth.rs  db.rs  main.rs  utils.rs
src/apis/: account.rs  api.rs  auth.rs  config.rs  debug.rs  dict.rs  login.rs  menu.rs  mod.rs  permission.rs  role.rs  tools.rs  user.rs
src/db/: sys_api.rs  sys_config.rs  sys_dict.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_user.rs  sys_user_state.rs
src/entities/: mod.rs  sys_api.rs  sys_config.rs  sys_dict.rs  sys_log.rs  sys_menu.rs  sys_permission.rs  sys_role.rs  sys_user.rs  sys_user_state.rs
src/services/: gmc.rs  mod.rs  mq.rs  rcache.rs  rcall.rs  rmq.rs  rpc.rs  uri.rs
src/utils/: audit.rs  bits.rs  code_tree.rs  consts.rs  kv.rs  md5_crypt.rs  mod.rs  mq_util.rs  multi_cache.rs  multi_level.rs  pub_rec.rs  rcall.rs  staticmut.rs  time.rs  uni_redis.rs  unix_crypt.rs
