[package]
name = "gensql"
version = "1.0.0"
edition = "2021"
authors = ["kiven <kivensoft@gmail.com>"]
description = "A simple sql generator library"

[features]
default = ["mysql"]
mysql = ["mysql_common"]

[dependencies]
cfg-if = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
mysql_common = { version = "0.29", optional = true }
mysql_async = { version = "0.31", default-features = false }
itoa = "1.0"
smallvec = { version = "1.10", features = ["write"] }
compact_str = { version = "0.7", features = ["serde", "bytes"] }
